--- a/3_lesson/registration.html
+++ b/3_lesson/registration.html
@@ -25,7 +25,7 @@
 
           </div>
           <div>
-            <a href="#">შესვლა</a>
+            <a href="index.html">შესვლა</a>
             <a href="#">რეგისტრაცია</a>
           </div>
             
